<resources>
    <string name="app_name" translatable="false">AFP Viewer</string>
    <string name="anon">Anonymous mode</string>
    <string name="temp">Temporary access (auth code)</string>
    <string name="perm">Permanent access (AFP account)</string>
    <string name="arabic">Arabic</string>
    <string name="deutsch">Deutsch</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="portuguese">Portuguese</string>
    <string name="chinese_china">Chinese - China</string>
    <string name="chinese_taiwan">Chinese - Taiwan</string>
    <string name="login">Login</string>
    <string name="loginmode">Login mode</string>
    <string name="accesscode">Access code</string>
    <string name="username">Usermame</string>
    <string name="password">Password</string>
    <string name="newssettings">News settings</string>
    <string name="numbertoshow">Number of articles to show</string>
    <string name="topics">Topics to follow (comma-separated list)</string>
    <string name="lang">Language</string>
    <string name="sourcecode">Source code</string>
    <string name="share">Share</string>
    <string name="mlt">More like this</string>
    <string name="airplane_icon">Airplane icon</string>
    <string name="offline">No internet connection</string>
    <string name="nothing">Nothing was found</string>
    <string name="settings">Settings</string>
    <string name="default_feed">Default feed</string>
    <string name="user_feed">User feed</string>
    <string name="saved">Saved</string>
    <string name="about">About</string>
    <string name="notopicsset">No topics set</string>
    <string name="gotosettings">Go to settings</string>
    <string name="ok">OK</string>
    <string name="missingdata">Missing data</string>
    <string name="missingunamepwd">Missing username or password</string>
    <string name="missingaccesscode">Missing access code</string>
    <string name="removed">Removed</string>
    <string name="savedforlater">Saved for later</string>
    <string name="cancel">Cancel</string>
</resources>